Fix two crash bugs (grmbl): * `null` deref in `EventDialog` with events without fulltext description. * Undo `StandardCharsets` change in places where it depends on API 33+ :-/ Android Studio used to explicitly warn about uses like that! :<